--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,9 @@
       "@/styles/*": [
         "./styles/*"
       ],
+      "@/generated/*": [
+        "./src/generated/*"
+      ],
       "@/*": [
         "./*"
       ]
