--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/adapter-neon": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "bcryptjs": "^3.0.3",
+    "framer-motion": "^12.29.2",
     "jose": "^6.1.3",
     "next": "16.1.6",
     "prisma": "^7.3.0",
