--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^3.0.3",
     "framer-motion": "^12.29.2",
     "jose": "^6.1.3",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "prisma": "^7.3.0",
     "react": "19.2.3",
