--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
         "./src/app/*"
       ],
       "@/components/*": [
+        "./src/components/*",
         "./components/*"
       ],
       "@/features/*": [
