--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ai": "^4.1.18",
     "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.3.1",
     "framer-motion": "^12.29.2",
     "jose": "^6.1.3",
     "lucide-react": "^0.563.0",
