--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "stripe": "^20.4.0",
     "ws": "^8.19.0"
   },
   "devDependencies": {
